Name:                diagrams-core
Version:             1.2
Synopsis:            Core libraries for diagrams EDSL
Description:         The core modules underlying diagrams,
                     an embedded domain-specific language
                     for compositional, declarative drawing.
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         https://github.com/diagrams/diagrams-core/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:  CHANGES.markdown, README.markdown, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
Tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.1
Source-repository head
  type:     git
  location: git://github.com/diagrams/diagrams-core.git

Library
  Exposed-modules:     Diagrams.Core,
                       Diagrams.Core.Compile,
                       Diagrams.Core.Envelope,
                       Diagrams.Core.HasOrigin,
                       Diagrams.Core.Juxtapose,
                       Diagrams.Core.Names,
                       Diagrams.Core.Points,
                       Diagrams.Core.Style,
                       Diagrams.Core.Trace,
                       Diagrams.Core.Transform,
                       Diagrams.Core.Types,
                       Diagrams.Core.V,
                       Diagrams.Core.Query

  Build-depends:       base >= 4.2 && < 4.8,
                       containers >= 0.4.2 && < 0.6,
                       semigroups >= 0.8.4 && < 0.16,
                       vector-space >= 0.8.4 && < 0.9,
                       vector-space-points >= 0.1 && < 0.3,
                       MemoTrie >= 0.4.7 && < 0.7,
                       newtype >= 0.2 && < 0.3,
                       monoid-extras >= 0.3 && < 0.4,
                       dual-tree >= 0.2 && < 0.3,
                       lens >= 4.0 && < 4.3
  hs-source-dirs:      src

  Other-extensions:    DeriveDataTypeable
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverlappingInstances
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances

  Default-language:    Haskell2010
