Name:                diagrams-core
Version:             1.4.2
Synopsis:            Core libraries for diagrams EDSL
Description:         The core modules underlying diagrams,
                     an embedded domain-specific language
                     for compositional, declarative drawing.
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         https://github.com/diagrams/diagrams-core/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       1.18
Extra-source-files:  CHANGELOG.md, README.markdown, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
Tested-with:         GHC == 7.10.2, GHC == 8.0.1, GHC == 8.2.2, GHC == 8.4.1, GHC == 8.6.1, GHC == 8.8.1
Source-repository head
  type:     git
  location: git://github.com/diagrams/diagrams-core.git

Library
  Exposed-modules:     Diagrams.Core,
                       Diagrams.Core.Compile,
                       Diagrams.Core.Envelope,
                       Diagrams.Core.HasOrigin,
                       Diagrams.Core.Juxtapose,
                       Diagrams.Core.Names,
                       Diagrams.Core.Points,
                       Diagrams.Core.Query
                       Diagrams.Core.Style,
                       Diagrams.Core.Measure,
                       Diagrams.Core.Trace,
                       Diagrams.Core.Transform,
                       Diagrams.Core.Types,
                       Diagrams.Core.V

  Build-depends:       base >= 4.2 && < 4.14,
                       containers >= 0.4.2 && < 0.7,
                       unordered-containers >= 0.2 && < 0.3,
                       semigroups >= 0.8.4 && < 0.20,
                       monoid-extras >= 0.3 && < 0.6,
                       dual-tree >= 0.2 && < 0.3,
                       lens >= 4.0 && < 4.19,
                       linear >= 1.11.3 && < 1.21,
                       adjunctions >= 4.0 && < 5.0,
                       distributive >=0.2.2 && < 1.0,
                       profunctors >= 5.0 && < 6.0,
                       mtl
  hs-source-dirs:      src

  Other-extensions:    DeriveDataTypeable
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverlappingInstances
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances

  Default-language:    Haskell2010
