Name:                diagrams-core
Version:             1.5.0.1
Synopsis:            Core libraries for diagrams EDSL
Description:         The core modules underlying diagrams,
                     an embedded domain-specific language
                     for compositional, declarative drawing.
Homepage:            https://diagrams.github.io
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         https://github.com/diagrams/diagrams-core/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       1.18
Extra-source-files:  CHANGELOG.md, README.markdown, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
Tested-with:         GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.1
Source-repository head
  type:     git
  location: git://github.com/diagrams/diagrams-core.git

Library
  Exposed-modules:     Diagrams.Core,
                       Diagrams.Core.Compile,
                       Diagrams.Core.Envelope,
                       Diagrams.Core.HasOrigin,
                       Diagrams.Core.Juxtapose,
                       Diagrams.Core.Names,
                       Diagrams.Core.Points,
                       Diagrams.Core.Query
                       Diagrams.Core.Style,
                       Diagrams.Core.Measure,
                       Diagrams.Core.Trace,
                       Diagrams.Core.Transform,
                       Diagrams.Core.Types,
                       Diagrams.Core.V

  Build-depends:       base >= 4.11 && < 4.18,
                       containers >= 0.4.2 && < 0.7,
                       unordered-containers >= 0.2 && < 0.3,
                       semigroups >= 0.8.4 && < 0.21,
                       monoid-extras >= 0.6 && < 0.7,
                       dual-tree >= 0.2 && < 0.3,
                       lens >= 4.0 && < 5.3,
                       linear >= 1.11.3 && < 1.22,
                       adjunctions >= 4.0 && < 5.0,
                       distributive >=0.2.2 && < 1.0,
                       profunctors >= 5.0 && < 6.0,
                       mtl
  hs-source-dirs:      src

  Other-extensions:    DeriveDataTypeable
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverlappingInstances
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances

  Default-language:    Haskell2010
